# isaacsim-flipper-torque-manager

./: .gitignore  MainScene.usd  README.md  cygnus.urdf  dependencies.txt  mainscene.usd
src/cygnus_config/: .setup_assistant  CMakeLists.txt  package.xml
src/cygnus_config/config/: cygnus.ros2_control.xacro  cygnus.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/cygnus_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/cygnus_description/: CMakeLists.txt
src/cygnus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/orion_description/: CMakeLists.txt  package.xml
src/orion_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
src/orion_description/meshes/: base_link.stl  flipper_arm_back_left_1.stl  flipper_arm_back_right_1.stl  flipper_arm_front_left_1.stl  flipper_arm_front_right_1.stl  wheel_back_left_1.stl  wheel_back_right_1.stl  wheel_front_left_1.stl  wheel_front_right_1.stl
src/orion_description/scripts/: isaac_control.py  system_setup.py  teleop_keyboard.py
src/orion_description/urdf/: materials.xacro  orion.gazebo  orion.trans  orion.urdf  orion.xacro
src/orion_description/urdf/orion/: orion.usd
src/orion_description/urdf/orion/configuration/: orion_base.usd  orion_physics.usd  orion_sensor.usd
src/orion_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+61 files in other folders)
