<?xml version="1.0"?>
<package format="2">
  <name>orion_description</name>
  <version>0.0.0</version>
<description>The orion_description package</description>
  <maintainer email="syuntoku14@todo.todo">syuntoku14</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
